<resources>
    <string name="app_name">AndroidReader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_shelf">Book Shelf</string>
    <string name="tasks_list">Tasks</string>
    <string name="stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="new_task">New Task</string>
    <string name="task_edit">Task Edit</string>
    <string name="reading">Reading</string>
    <string name="error_no_tasks">No tasks</string>
    <string name="read_header">Read</string>
    <string name="books_read">Books</string>
    <string name="pages_read">Pages</string>
    <string name="words_read">Words</string>
    <string name="speed_header">Speed of reading</string>
    <string name="hours_per_day">Hours/Day</string>
    <string name="words_per_min">Words/Min</string>
    <string name="pages_per_hour">Pages/Hour</string>
    <string name="spent_header">Spent</string>
    <string name="years_spent">Years</string>
    <string name="days_spent">Days</string>
    <string name="hours_spent">Hours</string>
    <string name="space">\u0020</string>
    <string name="done">Done:</string>
    <string name="goal">Goal:</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_author">No author</string>
    <string name="no_title">Unnnamedr</string>
    <string name="genre">Genre:</string>
    <string name="source">Source:</string>
    <string name="not_set">not set</string>
    <string name="b">B</string>
    <string name="kb">kB</string>
    <string name="mb">mB</string>
    <string name="gb">gB</string>
</resources>