<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout -->
<layout>

    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="ru.tp_project.androidreader.view_models.CommonStatsViewModel" />
    </data>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2"
        tools:context=".view.CommonStatsFragment">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/read_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="3"
                android:drawableStart="@drawable/ic_read_stat"
                android:drawablePadding="4dp"
                android:gravity="start|center_vertical"
                android:text="@string/read_header"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/books_read_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/books_read"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/books_read_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.booksRead)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pages_read_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/pages_read"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/pages_read_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.pagesRead)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/words_read_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/words_read"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/words_read_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.wordsRead)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/speed_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="3"
                android:drawableStart="@drawable/ic_speed_stat"
                android:drawablePadding="4dp"
                android:gravity="start|center_vertical"
                android:minWidth="40dp"
                android:text="@string/speed_header"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hours_per_day_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/hours_per_day"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/hours_per_day_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.hoursPerDay)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/words_per_min_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/words_per_min"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/words_per_min_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.wordsPerMin)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pages_per_hour_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/pages_per_hour"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/pages_per_hour_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.pagesPerHour)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/time_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="3"
                android:drawableStart="@drawable/ic_spent_stat"
                android:drawablePadding="4dp"
                android:gravity="start|center_vertical"
                android:text="@string/spent_header"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/years_spent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/years_spent"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/years_spent_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.years)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/days_spent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/days_spent"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/days_spent_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.days)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hours_spent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/left_rounded"
                    android:gravity="end|center_vertical"
                    android:padding="2dp"
                    android:text="@string/hours_spent"
                    android:textColor="@color/colorPrimaryGray" />

                <TextView
                    android:id="@+id/hours_spent_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/right_rounded"
                    android:gravity="start|center_vertical"
                    android:minWidth="40dp"
                    android:text="@{Integer.toString(viewmodel.statistic.hours)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</layout>